--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <title></title>
 </head>
 <body>
-<<p>"Kia ora ao mārama (hello world!)"</p>
+<p>"Kia ora ao mārama (hello world!)"</p>
 </body>
 </html>
