first page blog setup

--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="eng">
 <head>
-  <title></title>
+  <meta charset="UTF-8">
+  <meta name="name" content="content">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="#">
+  <title>Oliver Stigley's GitHub Page (PAGE title)</title>
+
 </head>
 <body>
-<p>"Kia ora ao mārama (hello world!)"</p>
+<h1>"Kia ora ao mārama (hello world!)"</h1>
 </body>
 </html>
