Styling and content changes round 1

--- a/c1-reflection-blog.html
+++ b/c1-reflection-blog.html
@@ -1,13 +1,38 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Reflection</title>
-  <link href="mystyle.css">
+  <link href="styles/main.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
+	<div id="header">
+		<h1>The o-bot</h1>
+	</div>
+<div id="overlay">
+	<h1 class="blog_title">First blog: Reflections on a fireside chat with Shereef</h1>
+	<p class="publication_details">Date: 23 February 2016.</p>
+	<ul class="tags">Tags:
+		<li>Reflection</li>
+		<li>Shereef</li>
+	</ul>
+	<p>not consumer mode.  In creator mode. I will blow my own mind. 
+
+	Don't look at boot camp as a package.  Don't rob ourself or others. Become a mad scientist to fix something, instead of complaining that your service is shit. 
+
+	Fear. 
+	That you will be average. That you know too much already. 
+	Go far and fast together!
+	You will be humbled by a challange, but you can learn the most with this.  Failure is necssary. </p>
+	<p>Paragraph</p>
+	<p>Paragraph</p>
+</div>
 
 </body>
 </html>
+
+
+
+
