Styling complete for now

--- a/index.html
+++ b/index.html
@@ -1,15 +1,80 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="name" content="content">
+  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="#">
-  <title>Oliver Stigley's GitHub Page (PAGE title)</title>
-
+  <title>oStigley on Github</title>
+  <link href="styles/main.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-<h1>"Kia ora ao mārama (hello world!)"</h1>
+	<div id="header">
+		<h1><a href="http://ostigley.github.io/">The o-bot</a></h1>
+
+		<ul class="nav">
+			<li class="nav"><a href="https://github.com/ostigley"><img src="styles/assets/GitHub-Mark.png"></a></li>
+			<li class="nav"><a href="https://nz.linkedin.com/in/oliverstigley"><img src="styles/assets/linked-in-logo-on-black-square-background_318-40265.png"></a></li>
+			<li class="nav"><img src="styles/assets/obot-pic.jpeg"></li>
+		</ul>	
+	</div>
+
+<div id="overlay">
+
+
+	<h1 class="blog_title">My own github home page</h1>
+		
+	<p>Kia ora ao mārama (hello world!)</p>
+		<p>Kia ora ao mārama (hello world!)</p>
+			<p>Kia ora ao mārama (hello world!)</p>
+				<p>Kia ora ao mārama (hello world!)</p>
+					<p>Kia ora ao mārama (hello world!)</p>
+						<p>Kia ora ao mārama (hello world!)</p>
+							<p>Kia ora ao mārama (hello world!)</p>
+
+	<p>Kia ora ao mārama (hello world!)</p>
+		<p>Kia ora ao mārama (hello world!)</p>
+			<p>Kia ora ao mārama (hello world!)</p>
+				<p>Kia ora ao mārama (hello world!)</p>
+					<p>Kia ora ao mārama (hello world!)</p>
+						<p>Kia ora ao mārama (hello world!)</p>
+							<p>Kia ora ao mārama (hello world!)</p>
+	<p>Kia ora ao mārama (hello world!)</p>
+		<p>Kia ora ao mārama (hello world!)</p>
+			<p>Kia ora ao mārama (hello world!)</p>
+				<p>Kia ora ao mārama (hello world!)</p>
+					<p>Kia ora ao mārama (hello world!)</p>
+						<p>Kia ora ao mārama (hello world!)</p>
+							<p>Kia ora ao mārama (hello world!)</p>
+
+	<p>Kia ora ao mārama (hello world!)</p>
+		<p>Kia ora ao mārama (hello world!)</p>
+			<p>Kia ora ao mārama (hello world!)</p>
+				<p>Kia ora ao mārama (hello world!)</p>
+					<p>Kia ora ao mārama (hello world!)</p>
+						<p>Kia ora ao mārama (hello world!)</p>
+							<p>Kia ora ao mārama (hello world!)</p>
+	<p>Kia ora ao mārama (hello world!)</p>
+		<p>Kia ora ao mārama (hello world!)</p>
+			<p>Kia ora ao mārama (hello world!)</p>
+				<p>Kia ora ao mārama (hello world!)</p>
+					<p>Kia ora ao mārama (hello world!)</p>
+						<p>Kia ora ao mārama (hello world!)</p>
+							<p>Kia ora ao mārama (hello world!)</p>
+
+	<p>Kia ora ao mārama (hello world!)</p>
+		<p>Kia ora ao mārama (hello world!)</p>
+			<p>Kia ora ao mārama (hello world!)</p>
+				<p>Kia ora ao mārama (hello world!)</p>
+					<p>Kia ora ao mārama (hello world!)</p>
+						<p>Kia ora ao mārama (hello world!)</p>
+							<p>Kia ora ao mārama (hello world!)</p>
+
+
+</div>
+
 </body>
 </html>
+
+
+
+
