--- a/c1-reflection-blog.html
+++ b/c1-reflection-blog.html
@@ -9,16 +9,28 @@
 </head>
 <body>
 	<div id="header">
-		<h1>The o-bot</h1>
+		<h1><a href="http://ostigley.github.io/">The o-bot</a></h1>
+
+		<ul class="nav">
+			<li class="nav"><a href="https://github.com/ostigley"><img src="styles/assets/GitHub-Mark.png"></a></li>
+			<li class="nav"><a href="https://nz.linkedin.com/in/oliverstigley"><img src="styles/assets/linked-in-logo-on-black-square-background_318-40265.png"></a></li>
+			<li class="nav"><img src="styles/assets/obot-pic.jpeg"></li>
+		</ul>	
 	</div>
 <div id="overlay">
+
 	<h1 class="blog_title">First blog: Reflections on a fireside chat with Shereef</h1>
-	<p class="publication_details">Date: 23 February 2016.</p>
-	<ul class="tags">Tags:
-		<li>Reflection</li>
-		<li>Shereef</li>
-	</ul>
-	<p>not consumer mode.  In creator mode. I will blow my own mind. 
+	<div class="publication_details">
+		<p>Date: 23 February 2016.  Tags:
+		<ul class="tags">
+			<li>Reflection</li>
+			<li>Shereef</li>
+			<li>Enspiral Dev Academy</li>
+		</ul>
+		</p>
+	</div>
+
+	<p>notes:     not consumer mode.  In creator mode. I will blow my own mind. 
 
 	Don't look at boot camp as a package.  Don't rob ourself or others. Become a mad scientist to fix something, instead of complaining that your service is shit. 
 
@@ -28,11 +40,25 @@
 	You will be humbled by a challange, but you can learn the most with this.  Failure is necssary. </p>
 	<p>Paragraph</p>
 	<p>Paragraph</p>
+
+<iframe src="https://player.vimeo.com/video/85001014" width="500" height="371" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/85001014">Fireside Chat with Shereef: Kitchen vs. Table</a> from <a href="https://vimeo.com/user21710066">Karim Bishay</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+<p></p>
+
+
 </div>
 
 </body>
 </html>
 
+
+		<div class="nav">
+			<ul class="nav">
+				<li><a href="https://github.com/ostigley"><img src="styles/assets/GitHub-Mark.png" width="35" height="35"></a></li>
+				<li><a href="https://nz.linkedin.com/in/oliverstigley"><img src="styles/assets/linked-in-logo-on-black-square-background_318-40265.png" width="35" height="35"></a></li>
+
+			</ul>	
+		</div>
 
 
 
