--- a/c1-reflection-blog.html
+++ b/c1-reflection-blog.html
@@ -12,54 +12,51 @@
 		<h1><a href="http://ostigley.github.io/">The o-bot</a></h1>
 
 		<ul class="nav">
-			<li class="nav"><a href="https://github.com/ostigley"><img src="styles/assets/GitHub-Mark.png"></a></li>
-			<li class="nav"><a href="https://nz.linkedin.com/in/oliverstigley"><img src="styles/assets/linked-in-logo-on-black-square-background_318-40265.png"></a></li>
-			<li class="nav"><img src="styles/assets/obot-pic.jpeg"></li>
+			<li class="nav"><a href="https://github.com/ostigley"><img src="styles/assets/GitHub-Mark.png" alt="#"></a></li>
+			<li class="nav"><a href="https://nz.linkedin.com/in/oliverstigley"><img src="styles/assets/linked-in-logo-on-black-square-background_318-40265.png" alt="#"></a></li>
+			<li class="nav"><img src="styles/assets/obot-pic.jpeg" alt="#"></li>
 		</ul>	
 	</div>
-<div id="overlay">
+	<div id="overlay">
 
-	<h1 class="blog_title">First blog: Reflections on a fireside chat with Shereef</h1>
-	<div class="publication_details">
-		<p>Date: 23 February 2016.  Tags:
-		<ul class="tags">
-			<li>Reflection</li>
-			<li>Shereef</li>
-			<li>Enspiral Dev Academy</li>
-		</ul>
-		</p>
+		<h1 class="blog_title">First blog: Reflections on a fireside chat with Shereef</h1>
+		<div class="publication_details">
+			<p>Date: 23 February 2016.  Tags:</p>
+			<ul class="tags">
+				<li>Reflection</li>
+				<li>Shereef</li>
+				<li>Enspiral Dev Academy</li>
+			</ul>
+			
+		</div>
+
+			<h2>What's your take on the DBC / EDA experience?</h2>
+			<p>I see the EDA experience as one where you get as much out of it as you put in to it, if not more.  Students should drop the fear of not knowing, or asking, or failing.  Without any of those, learning is limited.  It will be very hard!</p>
+			<h2>What are your impressions?</h2>
+			<p>Shereef said it helps to view this experience as one big experiment.  I quite like that.  I don't know what will happen, but I'm prepared to put myself forward for it.</p>
+			<p>Also, one student asked about competition amongst students and grads.  We joked about this last night at the bar.  It is somewhat natural to be competitive; we are all after jobs at the end of this.  At the same time, trying to be better than someone else won't work.  I'm a big believer in being the best I can be, not necessarily better than someone else.   As Louise C.K. said once <i>The only time you should in your neighbours bowl is to make sure that they have enough. You don't look in your neighbours bowl to see if you have more than them.</i></p>
+
+			<h2>How do you see yourself engaging with this type of culture?</h2>
+			<P>While I'm prepared to put my whole life into this for the next 18 weeks, I'm also not necessarily inclined to agree with everything that we are taught.  Chris Hadfield, Canadian Commander of the International Space Station, has a life approach called <a href="http://www.lifehack.org/articles/lifestyle/10-inspiring-life-lessons-from-astronaut-chris-hadfield.html">Aiming for Zero</a>.  Scroll to point # 2.  I think that's exactly how I will engage with the EDA culture. </P>
+
+
+			<h2>Have your expectations of EDA changed? If so, how?</h2>
+			<p>Not particularly.  I still have high expectations from EDA teachers, which I felt Shereef was trying to play down a little.  I definitely agree there is an element of self teaching and discovery, but I'm also looking for guidance and mentoring on tap, when I need it.</p>
+
+			<h2>Are you excited to participate in this kind of learning environment? </h2>
+			<p>YES</p>
+
+			<h2>Does it make you nervous?</h2>
+			<p>No.  Would it help to be nervous?  For me, no.</p>
+			<p>There is no try.  There is only do, and do not. </p>
+
+
+			<iframe src="https://player.vimeo.com/video/85001014" width="500" height="371"   allowfullscreen></iframe>
+			<a class="caption" href="https://vimeo.com/85001014"> Fireside Chat with Shereef: Kitchen vs. Table</a> from <a href="https://vimeo.com/user21710066">Karim Bishay</a> on <a href="https://vimeo.com">Vimeo</a>
+			
+
+
 	</div>
-
-<h2>What's your take on the DBC / EDA experience?</h2>
-<p>I see the EDA experience as one where you get as much out of it as you put in to it, if not more.  Students should drop the fear of not knowing, or asking, or failing.  Without any of those, learning is limited.  It will be very hard!</p>
-<h2>What are your impressions?</h2>
-<p>Shereef said it helps to view this experience as one big experiment.  I quite like that.  I don't know what will happen, but I'm prepared to put myself forward for it.</p>
-<p>Also, one student asked about competition amongst students and grads.  We joked about this last night at the bar.  It is somewhat natural to be competitive; we are all after jobs at the end of this.  At the same time, trying to be better than someone else won't work.  I'm a big believer in being the best I can be, not necessarily better than someone else.   As Louise C.K. said once <i>The only time you should in your neighbours bowl is to make sure that they have enough. You don't look in your neighbours bowl to see if you have more than them.</i></p>
-
-<h2>How do you see yourself engaging with this type of culture?</h2>
-<P>While I'm prepared to put my whole life into this for the next 18 weeks, I'm also not necessarily inclined to agree with everything that we are taught.  Chris Hadfield, Canadian Commander of the International Space Station, has a life approach called <a href="http://www.lifehack.org/articles/lifestyle/10-inspiring-life-lessons-from-astronaut-chris-hadfield.html">Aiming for Zero</a>.  Scroll to point # 2.  I think that's exactly how I will engage with the EDA culture. </P>
-
-
-<h2>Have your expectations of EDA changed? If so, how?</h2>
-<p>Not particularly.  I still have high expectations from EDA teachers, which I felt Shereef was trying to play down a little.  I definitely agree there is an element of self teaching and discovery, but I'm also looking for guidance and mentoring on tap, when I need it.</p>
-
-<h2>Are you excited to participate in this kind of learning environment? </h2>
-<p>YES</p>
-
-<h2>Does it make you nervous?</h2>
-<p>No.  Would it help to be nervous?  For me, no.</p>
-<p>There is no try.  There is only do, and do not. </p>
-
-
-
-
-
-<iframe src="https://player.vimeo.com/video/85001014" width="500" height="371" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<p><a href="https://vimeo.com/85001014">Fireside Chat with Shereef: Kitchen vs. Table</a> from <a href="https://vimeo.com/user21710066">Karim Bishay</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-<p></p>
-
-
-</div>
 
 </body>
 </html>
