--- a/c1-time-and-habits-blog.html
+++ b/c1-time-and-habits-blog.html
@@ -12,23 +12,23 @@
 		<h1><a href="http://ostigley.github.io/">The o-bot</a></h1>
 
 		<ul class="nav">
-			<li class="nav"><a href="https://github.com/ostigley"><img src="styles/assets/GitHub-Mark.png"></a></li>
-			<li class="nav"><a href="https://nz.linkedin.com/in/oliverstigley"><img src="styles/assets/linked-in-logo-on-black-square-background_318-40265.png"></a></li>
-			<li class="nav"><img src="styles/assets/obot-pic.jpeg"></li>
+			<li class="nav"><a href="https://github.com/ostigley"><img src="styles/assets/GitHub-Mark.png" alt="#"></a></li>
+			<li class="nav"><a href="https://nz.linkedin.com/in/oliverstigley"><img src="styles/assets/linked-in-logo-on-black-square-background_318-40265.png" alt="#"></a></li>
+			<li class="nav"><img src="styles/assets/obot-pic.jpeg" alt="#"></li>
 		</ul>	
 	</div>
 <div id="overlay">
 
 	<h1 class="blog_title"> Time and habit management resources</h1>
 	<div class="publication_details">
-		<p>Date: 25 February 2016.  Tags:
+		<p>Date: 25 February 2016.  Tags:</p>
 		<ul class="tags">
 			<li>Time management</li>
 			<li>Task management</li>
 			<li>Habits</li>
 			<li>Confidence</li>
 		</ul>
-		</p>
+	
 	</div>
 
 
