Udacity blog part 2, and responsive page width enabled

--- a/t2-html-css-dom-p1.html
+++ b/t2-html-css-dom-p1.html
@@ -21,7 +21,7 @@
 
 	<h1 class="blog_title">Udacity Reflection</h1>
 	<div class="publication_details">
-		<p>Date: 23 February 2016.  Tags:</p>
+		<p>Date: 1 March 2016.  Tags:</p>
 		<ul class="tags">
 			<li>Reflection</li>
 			<li>Udacity</li>
@@ -33,6 +33,8 @@
 	<h2>Here's my Wish list!</h2>
 	<p>I'd like to premise this with the knowledge that I have the design sense of a cinder block.</p>
 		<ul>
+			<li>Introduce normalize CSS1 </li>
+			<li>Introduce some of those cool media queties.   wow!</li>
 			<li>Introduce the float property for menu items, and introduce a footer with this property as well.</li>
 			<li>Investigate and make the most of the the flex property.  <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">Great link here.</a>  In particular, I think it could help centre and clean up my index page.</li>
 			<li>Introduce a simple css borders /boxing style for when I'm prototyping.  IE * {   outline: 1px solid red }.</li>
