--- a/c2-emotional-intelligence.html
+++ b/c2-emotional-intelligence.html
@@ -35,7 +35,7 @@
 
 			<p>I've believed for many years that emotional well being has a direct impact on physical well being.  Not that I'm good at keeping things like stress and frustration in check.</p>
 
-			<p>I believe there is value in this exploring this subject, but with a hint of caution.  Science is more than a body of knowledge to be quoted in books like this.  Science is a way of thinking, a way of sceptically interrogating the universe.  How many of the references provided were peer reviewed, verified and reproduced by academic institutions?  Perhaps many, perhaps only a few.  I don't have the time to find out.  I embrace the message of mindfulness and emotional intelligence 100%, just with out too much detail.  The subject itself is insightful, and healthy to explore with the goal of trying to become a better person.  Something I always try, and occasionally fail, to do. </p>
+			<p>I believe there is value in this exploring this subject.  It offers insight, and it's healthy to explore with the goal of trying to become a better person.  Something I always try, and occasionally fail, to do. </p>
 
 			<h2>How did you find the two minutes of mindfulness?</h2>
 			<p>Very good!  I occasionally meditate, so I am used to the sense of calmness.  I find yoga also helps focus the mind in to a state of calmness as well.  For me, there is a link on focussing on the poses, combined with the difficulty and physicality of the poses, that clears the mind.  I once described to a friend, that doing yoga made me feel like a puddle of calm water in a rough sea, with ripples of calm radiating out in to the rough.  In other words, it makes me calm and happier, which then has an effect on others interact with. </p>
