--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Oliver Stigley</title>
     <meta charset="UTF-8">
     
   </head>
   <body>
-  
+	  <div class="ext-links">Navbar:
+		  <ul>
+		  	<li>Facebook link & logo</li>
+		  	<li>Linkedint link & logo</li>
+		  	<li>github link & logo</li>
+		  	<li>email link</li>
+		  </ul>
+	  </div>
+	  
+	  <div class="container">
+	  	<header>
+	  		<h1>Oliver Stigley</h1>
+	  		<h2>Web Developer</h2>
+	  		<ul>
+	  			<li>HTML</li>
+	  			<li>CSS</li>
+	  			<li>Ruby on Rails</li>
+	  			<li>Javascript</li>
+	  			<li>NodeJS</li>
+	  		</ul>
+	  	</header>
+	  </div>
+
+	  <div class="container">
+	  	<a href="#">About</a>
+	  	<a href="#">Skills</a>
+	  	<a href="#">Projects</a>
+	  	<a href="#">C.V.</a>
+	  	<a href="/blogs/blogs_index.html">Blog</a>
+	  </div>
+
+	  <footer>
+	  	  <div class="ext-links">Navbar:
+			  <ul>
+			  	<li>Facebook link & logo</li>
+			  	<li>Linkedint link & logo</li>
+			  	<li>github link & logo</li>
+			  	<li>email link</li>
+			  </ul>
+		  </div>
+	  </footer>
   </body>
 </html>
