linked to normalise and skeleton stylesheets via CDN

--- a/blogs/blog-template.html
+++ b/blogs/blog-template.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Oliver Stigley</title>
+
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
+
     <meta charset="UTF-8">
     
   </head>
   <body>
-  
+	  <div class="ext-links">Navbar:
+		  <ul>
+  		  	<li><a href="../index.html">Home</a></li>
+		  	<li>Linkedin link & logo</li>
+		  	<li>github link & logo</li>
+		  	<li><a href="mailto:oliverstigley@gmail.com"><img src="#">email</a></li>
+		  </ul>
+	  </div>
+	  
+	  <div class="container">
+	  	<header>
+	  		<h1>Blog Title</h1>
+	  	</header>
+
+		<div class="publication_details">
+				<p>Publication date.  Tags:</p>
+				<ul class="tags">
+					<li>Reflection</li>
+					<li>Shereef</li>
+					<li>Enspiral Dev Academy</li>
+				</ul>
+		</div>
+		  <div class="blog_content">
+			  <p>
+			  	Content content content. 
+			  </p>
+		  </div>
+	  </div>
+
+	  <footer>
+	  	  <div class="ext-links">Navbar:
+			  <ul>
+			  	<li>Facebook link & logo</li>
+			  	<li>Linkedint link & logo</li>
+			  	<li>github link & logo</li>
+			  	<li>email link</li>
+			  </ul>
+		  </div>
+	  </footer>
   </body>
 </html>
