--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <html>
   <head>
     <title>Oliver Stigley</title>
+    
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
+
     <meta charset="UTF-8">
     
   </head>
   <body>
 	  <div class="ext-links">Navbar:
 		  <ul>
-		  	<li>Facebook link & logo</li>
-		  	<li>Linkedint link & logo</li>
+		  	<li><a href="../index.html">Home</a></li>
+		  	<li>Linkedin link & logo</li>
 		  	<li>github link & logo</li>
-		  	<li>email link</li>
+		  	<li><a href="mailto:oliverstigley@gmail.com"><img src="#">email</a></li>
 		  </ul>
 	  </div>
 	  
