updated index pages tyles, no media q

--- a/index.html
+++ b/index.html
@@ -5,51 +5,43 @@
     
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
+	<link rel="stylesheet" type="text/css" href="styles/main.css">
 
     <meta charset="UTF-8">
     
   </head>
   <body>
-	  <div class="ext-links">Navbar:
-		  <ul>
-		  	<li><a href="../index.html">Home</a></li>
-		  	<li>Linkedin link & logo</li>
-		  	<li>github link & logo</li>
-		  	<li><a href="mailto:oliverstigley@gmail.com"><img src="#">email</a></li>
-		  </ul>
-	  </div>
+  	  	<div class="container">
+	  	  	<div class="row">
+		  	  	<div class="twelve columns ext-links">
+				  <ul>
+				  	<li><a href="https://nz.linkedin.com/in/oliverstigley"><img src="styles/assets/linked-in-logo-on-black-square-background_318-40265.png"></a></li>
+				  	<li><a href="https://github.com/ostigley"><img src="styles/assets/GitHub-Mark.png"></a></li>
+				  	<li><a href="mailto:oliverstigley@gmail.com"><img src="styles/assets/logo_mail.png"></a></li>
+				  </ul>
+			  </div>
+			</div>
 	  
-	  <div class="container">
-	  	<header>
-	  		<h1>Oliver Stigley</h1>
-	  		<h2>Web Developer</h2>
-	  		<ul>
-	  			<li>HTML</li>
-	  			<li>CSS</li>
-	  			<li>Ruby on Rails</li>
-	  			<li>Javascript</li>
-	  			<li>NodeJS</li>
-	  		</ul>
-	  	</header>
-	  </div>
+		  	<!-- <div class="row"> -->
+			  	<div class="twelve columns heading">
+				  		<h1>Oliver Stigley</h1>
+			  		<ul>
+			  			<li>HTML</li>
+			  			<li>CSS</li>
+			  			<li>Ruby</li>
+			  			<li>Javascript</li>
+			  			<li>NodeJS</li>
+			  		</ul>
+			  	</div>
+		  	<!-- </div> -->
 
-	  <div class="container">
-	  	<a href="#">About</a>
+		<div class="container main">
+<!-- 	  	<a href="#">About</a>
 	  	<a href="#">Skills</a>
 	  	<a href="#">Projects</a>
-	  	<a href="#">C.V.</a>
+	  	<a href="#">C.V.</a> -->
 	  	<a href="/blogs/blogs_index.html">Blog</a>
 	  </div>
-
-	  <footer>
-	  	  <div class="ext-links">Navbar:
-			  <ul>
-			  	<li>Facebook link & logo</li>
-			  	<li>Linkedint link & logo</li>
-			  	<li>github link & logo</li>
-			  	<li>email link</li>
-			  </ul>
-		  </div>
-	  </footer>
+	</div>
   </body>
 </html>
