--- a/blogs/blog-template.html
+++ b/blogs/blog-template.html
@@ -2,53 +2,64 @@
 <html>
   <head>
     <title>Oliver Stigley</title>
+    
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
 	<link rel="stylesheet" type="text/css" href="../styles/main.css">
 
-    <meta charset="UTF-8">
-    
   </head>
+  
   <body>
-	  <div class="ext-links">Navbar:
-		  <ul>
-  		  	<li><a href="../index.html">Home</a></li>
-		  	<li>Linkedin link & logo</li>
-		  	<li>github link & logo</li>
-		  	<li><a href="mailto:oliverstigley@gmail.com"><img src="#">email</a></li>
-		  </ul>
-	  </div>
+  	  	<div class="container">
+	  	  	<div class="row">
+		  	  	<div class="twelve columns ext-links">
+				  <ul>
+				  	<li><a href="https://nz.linkedin.com/in/oliverstigley"><img src="../styles/assets/linked-in-logo-on-black-square-background_318-40265.png"></a></li>
+				  	<li><a href="https://github.com/ostigley"><img src="../styles/assets/GitHub-Mark.png"></a></li>
+				  	<li><a href="mailto:oliverstigley@gmail.com"><img src="../styles/assets/logo_mail.png"></a></li>
+				  </ul>
+			  </div>
+			</div>
 	  
-	  <div class="container">
-	  	<header>
-	  		<h1>Blog Title</h1>
-	  	</header>
+		  	<div class="row">
+			  	<div class="twelve columns heading">
+				  		<h1>Blog Title here</h1>
+			  			<h5>oliver Stigley</h5>
+			  	</div>
+		  	</div>
 
-		<div class="publication_details">
-				<p>Publication date.  Tags:</p>
-				<ul class="tags">
-					<li>Reflection</li>
-					<li>Shereef</li>
-					<li>Enspiral Dev Academy</li>
-				</ul>
+		<div class="container">
+			<div class="row">
+				<div class="twelve columns blogcontent">
+					<p>dates 23 february tags a b c </p>
+
+					<p> 
+						FRom faireſt creatures we deſire increaſe,  That thereby beauties Roſe might neuer die,  But as the riper ſhould by time deceaſe,  His tender heire might beare his memory:  But thou contracted to thine owne bright eyes,  Feed’ſt thy lights flame with ſelfe ſubſtantiall fewell,  
+					</p>
+					<p>
+						Making a famine where aboundance lies,  Thy ſelfe thy foe,to thy ſweet ſelfe too cruell:  Thou that art now the worlds freſh ornament,  And only herauld to the gaudy ſpring,  Within thine owne bud burieſt thy content,  And tender chorle makſt waſt in niggarding:  Pitty the world,or elſe this glutton be,  To eate the worlds due,by the graue and thee.
+					</p>	
+					<p>
+						Making a famine where aboundance lies,  Thy ſelfe thy foe,to thy ſweet ſelfe too cruell:  Thou that art now the worlds freſh ornament,  And only herauld to the gaudy ſpring,  Within thine owne bud burieſt thy content,  And tender chorle makſt waſt in niggarding:  Pitty the world,or elſe this glutton be,  To eate the worlds due,by the graue and thee.
+					</p>
+
+					<a href="#">Here's my link</a>
+
+					<ul>
+						<li>lists</li>
+						<li>lists</li>
+						<li>lists</li>
+						<li>lists</li>
+
+					</ul>
+				</div>
+			</div>
 		</div>
-		  <div class="blog_content">
-			  <p>
-			  	Content content content. 
-			  </p>
-		  </div>
 	  </div>
-
-	  <footer>
-	  	  <div class="ext-links">Navbar:
-			  <ul>
-			  	<li>Facebook link & logo</li>
-			  	<li>Linkedint link & logo</li>
-			  	<li>github link & logo</li>
-			  	<li>email link</li>
-			  </ul>
-		  </div>
-	  </footer>
+	</div>
   </body>
 </html>
