--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <title>Oliver Stigley</title>
     
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
 	<link rel="stylesheet" type="text/css" href="styles/main.css">
@@ -22,7 +26,7 @@
 			  </div>
 			</div>
 	  
-		  	<!-- <div class="row"> -->
+		  	<div class="row">
 			  	<div class="twelve columns heading">
 				  		<h1>Oliver Stigley</h1>
 			  		<ul>
@@ -33,15 +37,13 @@
 			  			<li>NodeJS</li>
 			  		</ul>
 			  	</div>
-		  	<!-- </div> -->
-
-		<div class="container main">
-<!-- 	  	<a href="#">About</a>
-	  	<a href="#">Skills</a>
-	  	<a href="#">Projects</a>
-	  	<a href="#">C.V.</a> -->
-	  	<a href="/blogs/blogs_index.html">Blog</a>
-	  </div>
-	</div>
-  </body>
+		  	</div>
+		  	<div class="row">
+				<div class="twelve columns main">
+				  	<a href="blogs/blogs-index.html">Blog</a>
+			  	</div>
+		  	</div>
+		</div>
+	</body>
 </html>
+
