Blog pages restyled

--- a/blogs/c1-time-and-habits-blog.html
+++ b/blogs/c1-time-and-habits-blog.html
@@ -1,58 +1,69 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
+    <title>Oliver Stigley: Time & Habits</title>
+    
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Time & Habits</title>
-	
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
 	<link rel="stylesheet" type="text/css" href="../styles/main.css">
-</head>
-<body>
-	<div id="header">
-		<h1><a href="http://ostigley.github.io/">The o-bot</a></h1>
 
-		<ul class="nav">
-			<li class="nav"><a href="https://github.com/ostigley"><img src="styles/assets/GitHub-Mark.png" alt="#"></a></li>
-			<li class="nav"><a href="https://nz.linkedin.com/in/oliverstigley"><img src="styles/assets/linked-in-logo-on-black-square-background_318-40265.png" alt="#"></a></li>
-			<li class="nav"><img src="styles/assets/obot-pic.jpeg" alt="#"></li>
-		</ul>	
+  </head>
+  
+  <body>
+  	  	<div class="container">
+	  	  	<div class="row">
+		  	  	<div class="twelve columns ext-links">
+				  <ul>
+				  	<li><a href="https://nz.linkedin.com/in/oliverstigley"><img src="../styles/assets/linked-in-logo-on-black-square-background_318-40265.png"></a></li>
+				  	<li><a href="https://github.com/ostigley"><img src="../styles/assets/GitHub-Mark.png"></a></li>
+				  	<li><a href="mailto:oliverstigley@gmail.com"><img src="../styles/assets/logo_mail.png"></a></li>
+				  </ul>
+			  </div>
+			</div>
+	  
+		  	<div class="row">
+			  	<div class="twelve columns heading">
+				  		<h3>Time & Habits</h3>
+			  			<h5>Oliver Stigley</h5>
+			  	</div>
+		  	</div>
+
+		<div class="container">
+			<div class="row">
+				<div class="twelve columns blogcontent">
+					<p>Date: 25 February 2016.</p>
+
+					<h5>Which timebox and habits techniques did you try?</h5>
+					<p>
+						I'm experimenting with the pomodoro technique, which I have heard of but not used before.  I'm also planning my days quite carefully, so I know what I'm trying to achieve each day.  I spare 15minutes each day, planning the next day.  This makes it easier for me to muck in without hesitation
+					</p>
+
+
+					<h5>What did you find interesting?</h5>
+					<p>
+						I found the concept of making small habits over time to achieve big changes, interesting. In particular the use of existing behaviours to trigger those habits. 
+					</p>
+					<p>
+						The same applies to 'think big' 'start small'.  In a sense this is almost agile thinking.  Breaking large tasks in to small rolling jobs, to make the process smoother and easier to achieve.
+					</p>
+
+
+					<h5>What worked for you?</h5>
+					<p>Ask me again in 3 months</p>
+
+					<h5>Which will you experiment further with?</h5>
+					<p>I'm going to continue with habit creation, specifically using behavioural triggers.</p>
+				</div>
+			</div>
+		</div>
+	  </div>
 	</div>
-<div id="overlay">
-
-	<h1 class="blog_title"> Time and habit management resources</h1>
-	<div class="publication_details">
-		<p>Date: 25 February 2016.  Tags:</p>
-		<ul class="tags">
-			<li>Time management</li>
-			<li>Task management</li>
-			<li>Habits</li>
-			<li>Confidence</li>
-		</ul>
-	
-	</div>
-
-
-<h2>Which timebox and habits techniques did you try?</h2>
-<p>I'm experimenting with the pomodoro technique, which I have heard of but not used before.  I'm also planning my days quite carefully, so I know what I'm trying to achieve each day.  I spare 15minutes each day, planning the next day.  This makes it easier for me to muck in without hesitation</p>
-
-<h2>What did you find interesting?</h2>
-<p>I found the concept of making small habits over time to achieve big changes, interesting. In particular the use of existing behaviours to trigger those habits. </p>
-<p>The same applies to 'think big' 'start small'.  In a sense this is almost agile thinking.  Breaking large tasks in to small rolling jobs, to make the process smoother and easier to achieve.</p>
-
-<h2>What worked for you?</h2>
-<p>Ask me again in 3 months</p>
-
-<h2>Which will you experiment further with?</h2>
-<p>I'm going to continue with habit creation, specifically using behavioural triggers.</p>
-
-</div>
-
-</body>
+  </body>
 </html>
-
 
 
 
