--- a/blogs/c2-emotional-intelligence.html
+++ b/blogs/c2-emotional-intelligence.html
@@ -1,57 +1,69 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
+    <title>Oliver Stigley: Reflection & Emotional Intelligence</title>
+    
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Reflection</title>
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
-<link rel="stylesheet" type="text/css" href="../styles/main.css">
-</head>
-<body>
-	<div id="header">
-		<h1><a href="http://ostigley.github.io/">The o-bot</a></h1>
+	<link rel="stylesheet" type="text/css" href="../styles/main.css">
 
-		<ul class="nav">
-			<li class="nav"><a href="https://github.com/ostigley"><img src="styles/assets/GitHub-Mark.png" alt="#"></a></li>
-			<li class="nav"><a href="https://nz.linkedin.com/in/oliverstigley"><img src="styles/assets/linked-in-logo-on-black-square-background_318-40265.png" alt="#"></a></li>
-			<li class="nav"><img src="styles/assets/obot-pic.jpeg" alt="#"></li>
-		</ul>	
-	</div>
-	<div id="overlay">
+  </head>
+  
+  <body>
+  	  	<div class="container">
+	  	  	<div class="row">
+		  	  	<div class="twelve columns ext-links">
+				  <ul>
+				  	<li><a href="https://nz.linkedin.com/in/oliverstigley"><img src="../styles/assets/linked-in-logo-on-black-square-background_318-40265.png"></a></li>
+				  	<li><a href="https://github.com/ostigley"><img src="../styles/assets/GitHub-Mark.png"></a></li>
+				  	<li><a href="mailto:oliverstigley@gmail.com"><img src="../styles/assets/logo_mail.png"></a></li>
+				  </ul>
+			  </div>
+			</div>
+	  
+		  	<div class="row">
+			  	<div class="twelve columns heading">
+				  		<h3>Cultural Blog: Emotional Intelligence</h3>
+			  			<h5>Oliver Stigley</h5>
+			  	</div>
+		  	</div>
 
-		<h1 class="blog_title">Cultural Blog: Emotional Intelligence</h1>
-		<div class="publication_details">
-			<p>Date: 2 March 2016.  Tags:</p>
-			<ul class="tags">
-				<li>Reflection</li>
-				<li>Emotional Intelligence</li>
-				<li>Mindfulness</li>
-				<li>Search Inside Yourself</li>
-			</ul>
+		<div class="container">
+			<div class="row">
+				<div class="twelve columns blogcontent">
+					<p>Date: 2 March 2016.</p>
+
+					<h5>What learnings did you take from the chapter?</h5>
+				<p>
+					It's cool to know that we are reading a book that many Google employees also have to read as part of their emotional intelligence training. I particularly like the different ways of thinking about mindfulness, and attention.  <em>"paying attention in a particular way: on purpose, in the present moment, and non-judgementally"</em>
+				</p>
+
+
+				<p>
+					I've believed for many years that emotional well being has a direct impact on physical well being.  Not that I'm good at keeping things like stress and frustration in check.
+				</p>
+
+
+				<p>
+					I believe there is value in this exploring this subject.  It offers insight, and it's healthy to explore with the goal of trying to become a better person.  Something I always try, and occasionally fail, to do. 
+				</p>
+
+				<h5>How did you find the two minutes of mindfulness?</h5>
+				<p>
+					Very good!  I occasionally meditate, so I am used to the sense of calmness.  I find yoga also helps focus the mind in to a state of calmness as well.  For me, there is a link on focussing on the poses, combined with the difficulty and physicality of the poses, that clears the mind.  I once described to a friend, that doing yoga made me feel like a puddle of calm water in a rough sea, with ripples of calm radiating out in to the rough.  In other words, it makes me calm and happier, which then has an effect on others interact with. 
+				</p>
 			
+				<p>
+					I personally find focussing on my breath to be the best way to have introspective, calm moments.  The 'Easier Way' of doing nothing but being for 2 minutes just wouldn't work for me.  I have too many things to worry about!  My breathing helps me not think about those things, so I opt for that method. 
+				</p>
+				</div>
+			</div>
 		</div>
-			<h2>What learnings did you take from the chapter?</h2>
-			<p>It's cool to know that we are reading a book that many Google employees also have to read as part of their emotional intelligence training. I particularly like the different ways of thinking about mindfulness, and attention.  <em>"paying attention in a particular way: on purpose, in the present moment, and non-judgementally"</em></p>
-
-			<p>I've believed for many years that emotional well being has a direct impact on physical well being.  Not that I'm good at keeping things like stress and frustration in check.</p>
-
-			<p>I believe there is value in this exploring this subject.  It offers insight, and it's healthy to explore with the goal of trying to become a better person.  Something I always try, and occasionally fail, to do. </p>
-
-			<h2>How did you find the two minutes of mindfulness?</h2>
-			<p>Very good!  I occasionally meditate, so I am used to the sense of calmness.  I find yoga also helps focus the mind in to a state of calmness as well.  For me, there is a link on focussing on the poses, combined with the difficulty and physicality of the poses, that clears the mind.  I once described to a friend, that doing yoga made me feel like a puddle of calm water in a rough sea, with ripples of calm radiating out in to the rough.  In other words, it makes me calm and happier, which then has an effect on others interact with. </p>
-			
-			<p>I personally find focussing on my breath to be the best way to have introspective, calm moments.  The 'Easier Way' of doing nothing but being for 2 minutes just wouldn't work for me.  I have too many things to worry about!  My breathing helps me not thing about those things, so I opt for that method. </p>
-
-			
-
-
+	  </div>
 	</div>
-
-</body>
+  </body>
 </html>
-
-
-
-
