--- a/blogs/t2-html-css-dom-p1.html
+++ b/blogs/t2-html-css-dom-p1.html
@@ -1,70 +1,84 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Udacity Reflection</title>
-  <link href="styles/main.css" rel="stylesheet" type="text/css"/>
-</head>
-<body>
-	<div id="header">
-		<h1><a href="http://ostigley.github.io/">The o-bot</a></h1>
+  <head>
+    <title>Oliver Stigley: Udacity Reflection</title>
+    
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<ul class="nav">
-			<li class="nav"><a href="https://github.com/ostigley"><img src="styles/assets/GitHub-Mark.png" alt="#"></a></li>
-			<li class="nav"><a href="https://nz.linkedin.com/in/oliverstigley"><img src="styles/assets/linked-in-logo-on-black-square-background_318-40265.png" alt="#"></a></li>
-			<li class="nav"><img src="styles/assets/obot-pic.jpeg" alt="#"></li>
-		</ul>	
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
+	<link rel="stylesheet" type="text/css" href="../styles/main.css">
+
+  </head>
+  
+  <body>
+  	  	<div class="container">
+	  	  	<div class="row">
+		  	  	<div class="twelve columns ext-links">
+				  <ul>
+				  	<li><a href="https://nz.linkedin.com/in/oliverstigley"><img src="../styles/assets/linked-in-logo-on-black-square-background_318-40265.png"></a></li>
+				  	<li><a href="https://github.com/ostigley"><img src="../styles/assets/GitHub-Mark.png"></a></li>
+				  	<li><a href="mailto:oliverstigley@gmail.com"><img src="../styles/assets/logo_mail.png"></a></li>
+				  </ul>
+			  </div>
+			</div>
+	  
+		  	<div class="row">
+			  	<div class="twelve columns heading">
+				  		<h3>Udacity Reflection</h3>
+			  			<h5>Oliver Stigley</h5>
+			  	</div>
+		  	</div>
+
+		<div class="container">
+			<div class="row">
+				<div class="twelve columns blogcontent">
+					<p>Date: 1 March 2016.</p>
+					<h5>Here's my Wish list!</h5>
+					<p>
+						I'd like to premise this with the knowledge that I have the design sense of a cinder block.
+					</p>
+
+					<ul>
+						<li>Introduce normalize CSS1 </li>
+						<li>Introduce some of those cool media queties.   wow!</li>
+						<li>Introduce the float property for menu items, and introduce a footer with this property as well.</li>
+						<li>Investigate and make the most of the the flex property.  <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">Great link here.</a>  In particular, I think it could help centre and clean up my index page.</li>
+						<li>Introduce a simple css borders /boxing style for when I'm prototyping.  IE * {   outline: 1px solid red }.</li>
+						<li>Consider how I can use shapes / border-radius for dividers, instead of images.</li>
+						<li>I like the off canvas menu.</li>
+						<li>I like the static background, rolling text / parallax scrolling.</li>
+						<li>Animations... are these javascript?</li>
+						<li>Make the site better for mobile viewing.  Introduce some responsive styling.</li>
+						<li>Change colour / emphsaise of paragraphs when hover pointer of paragraph.</li>
+						<li>Introduce rem and em instead of px, where appropriate. </li>
+						<li>introduce webkit requirements for flex, and consider browser compatibility.</li>
+						<li>Try and use html partials instead of pasting header details in each page.</li>
+						<li>Use a few more classes for specific boxes on the page i.e. a class for blog.</li>
+					</ul>
+
+					<h5>An analogy to describe HTML, CSS and the DOM...</h5>
+					<p>
+						I liked the analogy given in the Udacity lesson 1.  HTML is like the walls, ceiling, floor... the rooms of the house.  CSS is interior designer friend coming round telling you how everything should look.
+					</p>
+
+				 	<h5>What is meant by boxifying design?</h5>
+				 	<p>
+					 	I like this concept.  It refers to a website effectively being just a bunch of boxes, which you can manipulate with CSS.  You can cut them up, making them different shapes, move them round however you like. 
+				 	</p>
+				 	<h5>What is the box model?</h5>
+				 	<p>
+					 	The box model refers to all boxes having a margin, border, padding and content.  Just like this picture here.
+				 	</p>
+				 	<img src="../styles/assets/box-model.png" alt="#" id="box">
+			</div>
+		</div>
+	  </div>
 	</div>
-<div id="overlay">
-
-	<h1 class="blog_title">Udacity Reflection</h1>
-	<div class="publication_details">
-		<p>Date: 1 March 2016.  Tags:</p>
-		<ul class="tags">
-			<li>Reflection</li>
-			<li>Udacity</li>
-			<li>HTML CSS</li>
-		</ul>
-		
-	</div>
-
-	<h2>Here's my Wish list!</h2>
-	<p>I'd like to premise this with the knowledge that I have the design sense of a cinder block.</p>
-		<ul>
-			<li>Introduce normalize CSS1 </li>
-			<li>Introduce some of those cool media queties.   wow!</li>
-			<li>Introduce the float property for menu items, and introduce a footer with this property as well.</li>
-			<li>Investigate and make the most of the the flex property.  <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">Great link here.</a>  In particular, I think it could help centre and clean up my index page.</li>
-			<li>Introduce a simple css borders /boxing style for when I'm prototyping.  IE * {   outline: 1px solid red }.</li>
-			<li>Consider how I can use shapes / border-radius for dividers, instead of images.</li>
-			<li>I like the off canvas menu.</li>
-			<li>I like the static background, rolling text / parallax scrolling.</li>
-			<li>Animations... are these javascript?</li>
-			<li>Make the site better for mobile viewing.  Introduce some responsive styling.</li>
-			<li>Change colour / emphsaise of paragraphs when hover pointer of paragraph.</li>
-			<li>Introduce rem and em instead of px, where appropriate. </li>
-			<li>introduce webkit requirements for flex, and consider browser compatibility.</li>
-			<li>Try and use html partials instead of pasting header details in each page.</li>
-			<li>Use a few more classes for specific boxes on the page i.e. a class for blog.</li>
-	</ul>
-
-	<h2>Can you think of an analogy to describe HTML, CSS and the DOM? How would you describe it to your non-technical friend?</h2>
-	<p>I liked the analogy given in the Udacity lesson 1.  HTML is like the walls, ceiling, floor... the rooms of the house.  CSS is interior designer friend coming round telling you how everything should look.</p>
- 	<h2>What is meant by boxifying design?</h2>
- 	<p>I like this concept.  It refers to a website effectively being just a bunch of boxes, which you can manipulate with CSS.  You can cut them up, making them different shapes, move them round however you like. </p>
- 	<h2>What is the box model?</h2>
- 	<p>The box model refers to all boxes having a margin, border, padding and content.  Just like this picture here.</p>
- 	<img src="styles/assets/box-model.png" alt="#">
-
-
-
-</div>
-
-</body>
+  </body>
 </html>
-
 
 
 
