--- a/blogs/t2-html-css-dom-p2.html
+++ b/blogs/t2-html-css-dom-p2.html
@@ -1,52 +1,69 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Udacity Reflection Pt 2</title>
-  <link href="styles/main.css" rel="stylesheet" type="text/css"/>
-</head>
-<body>
-	<div id="header">
-		<h1><a href="http://ostigley.github.io/">The o-bot</a></h1>
+  <head>
+    <title>Oliver Stigley: Udacity Reflection Pt 2</title>
+    
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<ul class="nav">
-			<li class="nav"><a href="https://github.com/ostigley"><img src="styles/assets/GitHub-Mark.png" alt="#"></a></li>
-			<li class="nav"><a href="https://nz.linkedin.com/in/oliverstigley"><img src="styles/assets/linked-in-logo-on-black-square-background_318-40265.png" alt="#"></a></li>
-			<li class="nav"><img src="styles/assets/obot-pic.jpeg" alt="#"></li>
-		</ul>	
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
+	<link rel="stylesheet" type="text/css" href="../styles/main.css">
+
+  </head>
+  
+  <body>
+  	  	<div class="container">
+	  	  	<div class="row">
+		  	  	<div class="twelve columns ext-links">
+				  <ul>
+				  	<li><a href="https://nz.linkedin.com/in/oliverstigley"><img src="../styles/assets/linked-in-logo-on-black-square-background_318-40265.png"></a></li>
+				  	<li><a href="https://github.com/ostigley"><img src="../styles/assets/GitHub-Mark.png"></a></li>
+				  	<li><a href="mailto:oliverstigley@gmail.com"><img src="../styles/assets/logo_mail.png"></a></li>
+				  </ul>
+			  </div>
+			</div>
+	  
+		  	<div class="row">
+			  	<div class="twelve columns heading">
+				  		<h3>Udacity Reflection Pt 2</h3>
+			  			<h5>Oliver Stigley</h5>
+			  	</d
+				  	iv>
+		  	</div>
+
+		<div class="container">
+			<div class="row">
+				<div class="twelve columns blogcontent">
+					<p>Date: 2 March 2016.</p>
+
+				 	<h5>What is grid based design?</h5>
+				 	<p>
+					 	Grid based design utilises columns in browswer, to give better structure to the page layout. Usually there are 12 colums, each taking up 8.33% of the page width.  This is because 12 is easily divisible by 2, 3 and 4.
+				 	</p>
+
+				 	<h5>Whats all the hype about responsive webpages?</h5>
+				 	<p>
+					 	It makes sense to have a webpage adapt to the viewing port of the device being used.  CSS can now be adapted such that it responds to the device automatically, making easy viewing for the visitor.
+				 	</p>
+
+				 	<h5>Semantic structure</h5>
+				 	<p>
+					 	I'm a little confused about this question.
+				 	</p>
+
+				 	<h5>Any other points you found interesting and want to reflect on</h5>
+				 	<p>
+				 	Grid based design utilises columns in browswer, to give better structure to the page layout.
+				 	</p>
+				</div>
+			</div>
+		</div>
+	  </div>
 	</div>
-<div id="overlay">
-
-	<h1 class="blog_title">Technical Blog Part 2 (Udacity Reflection)</h1>
-	<div class="publication_details">
-		<p>Date: 2 March 2016.  Tags:</p>
-		<ul class="tags">
-			<li>Reflection</li>
-			<li>Udacity</li>
-			<li>HTML CSS</li>
-		</ul>
-		
-	</div>
-
- 	<h2>What is grid based design?</h2>
- 	<p>Grid based design utilises columns in browswer, to give better structure to the page layout. Usually there are 12 colums, each taking up 8.33% of the page width.  This is because 12 is easily divisible by 2, 3 and 4.</p>
-
- 	<h2>Whats all the hype about responsive webpages?</h2>
- 	<p>It makes sense to have a webpage adapt to the viewing port of the device being used.  CSS can now be adapted such that it responds to the device automatically, making easy viewing for the visitor.</p>
-
- 	<h2>Semantic structure</h2>
- 	<p>I'm a little confused about this question.</p>
-
- 	<h2>Any other points you found interesting and want to reflect on</h2>
- 	<p>Grid based design utilises columns in browswer, to give better structure to the page layout.</p>
-
-</div>
-
-</body>
+  </body>
 </html>
-
 
 
 
