--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				  <ul>
 				  	<li><a href="https://nz.linkedin.com/in/oliverstigley"><img src="styles/assets/linked-in-logo-on-black-square-background_318-40265.png"></a></li>
 				  	<li><a href="https://github.com/ostigley"><img src="styles/assets/GitHub-Mark.png"></a></li>
-				  	<li><a href="mailto:oliverstigley@gmail.com"><img src="styles/assets/logo_mail.png"></a></li>
+				  	<li><a href="mailto:oliverstigley@gmail.com"><img src="styles/assets/mail-4.png"></a></li>
 				  </ul>
 			  </div>
 			</div>
@@ -40,7 +40,7 @@
 		  	</div>
 		  	<div class="row">
 				<div class="twelve columns main">
-				  	<a href="blogs/blogs-index.html">Blog</a>
+				  	<a href="blogs/blogs-index.html" id="breathing-button">Blog</a>
 			  	</div>
 		  	</div>
 		</div>
