--- a/blogs/c2-emotional-intelligence.html
+++ b/blogs/c2-emotional-intelligence.html
@@ -14,13 +14,14 @@
   </head>
   
   <body>
+  	  	<div id="backlink"><a href="../blogs/blogs-index.html">back...</a></div>
   	  	<div class="container">
 	  	  	<div class="row">
 		  	  	<div class="twelve columns ext-links">
 				  <ul>
 				  	<li><a href="https://nz.linkedin.com/in/oliverstigley"><img src="../styles/assets/linked-in-logo-on-black-square-background_318-40265.png"></a></li>
 				  	<li><a href="https://github.com/ostigley"><img src="../styles/assets/GitHub-Mark.png"></a></li>
-				  	<li><a href="mailto:oliverstigley@gmail.com"><img src="../styles/assets/logo_mail.png"></a></li>
+				  	<li><a href="mailto:oliverstigley@gmail.com"><img src="../styles/assets/mail-4.png"></a></li>
 				  </ul>
 			  </div>
 			</div>
