Technical blog design to web

--- a/blogs/blogs-index.html
+++ b/blogs/blogs-index.html
@@ -27,13 +27,13 @@
 			  </div>
 			</div>
 	  
-		  	<!-- <div class="row"> -->
+		  	<div class="row">
 			  	<div class="twelve columns heading">
 				  		<h1>Oliver Stigley</h1>
 			  			<h5>My Enspiral Dev Academy Blogs</h5>
 			  		
 			  	</div>
-		  	<!-- </div> -->
+		  	</div>
 
 
 
@@ -42,6 +42,10 @@
 		<div class="row">
 			<div class="twelve columns bloglist">
 				<ul>
+					<li>
+						<a href="t3-design-to-web-blog.html">Design to Deployment</a>
+						<p>Date: 10 March 2016</p>
+					</li>
 					<li>
 						<a href="c2-emotional-intelligence.html">Emotional Intelligence: Chpt. 1</a>
 						<p>Date: 2 March 2016</p>
