Cultural blog: meditation

--- a/blogs/c1-reflection-blog.html
+++ b/blogs/c1-reflection-blog.html
@@ -35,7 +35,7 @@
 
 		<div class="container">
 			<div class="row">
-				<div class="twelve columns blogcontent">
+				<article class="twelve columns blogcontent">
 					<p>Date: 23 February 2016.</p>
 
 					<h5>What's your take on the DBC / EDA experience?</h5>
@@ -72,7 +72,7 @@
 					<iframe src="https://player.vimeo.com/video/85001014" width="500" height="371"   allowfullscreen></iframe><br>
 					<a class="caption" href="https://vimeo.com/85001014"> Fireside Chat with Shereef: Kitchen vs. Table</a> from <a href="https://vimeo.com/user21710066">Karim Bishay</a> on <a href="https://vimeo.com">Vimeo</a>
 			
-				</div>
+				</article>
 			</div>
 		</div>
 	  </div>
