--- a/blogs/t3-design-to-web-blog.html
+++ b/blogs/t3-design-to-web-blog.html
@@ -27,15 +27,15 @@
 				</div>
 		  
 			  	<div class="row">
-				  	<div class="twelve columns heading">
+				  	<header class="twelve columns heading">
 					  		<h3>Design to Web</h3>
 				  			<h5>Oliver Stigley</h5>
-				  	</div>
+				  	</header>
 			  	</div>
 
 			<div class="container">
 				<div class="row">
-					<div class="twelve columns blogcontent">
+					<article class="twelve columns blogcontent">
 						<p>9th of March 2016 </p>
 						<h5>Responsiveness</h5>
 						<p>
@@ -67,7 +67,7 @@
 						</p>
 						<img src="../styles/assets/Wireframe.jpg" alt="#" class="u-max-full-width">
 
-					</div>
+					</article>
 				</div>
 			</div>
 		  </div>
