--- a/blogs/blogs-index.html
+++ b/blogs/blogs-index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
   		<div id="backlink"><a href="../index.html">Home</a></div>
-  	  	<div class="container">
+  	  	<section class="container">
 	  	  	<div class="row">
 		  	  	<div class="twelve columns ext-links">
 				  <ul>
@@ -35,41 +35,44 @@
 			  	</div>
 		  	</div>
 
+			<section class="container">
+				<div class="row">
+					<div class="twelve columns bloglist">
+						<ul>
+							<li>
+								<a href="c3-meditation-process.html">Thoughts on Meditation</a>
+								<p>Date 11 March 2016</p>
+							</li>
 
-
-
-		<div class="container">
-		<div class="row">
-			<div class="twelve columns bloglist">
-				<ul>
-					<li>
-						<a href="t3-design-to-web-blog.html">Design to Deployment</a>
-						<p>Date: 10 March 2016</p>
-					</li>
-					<li>
-						<a href="c2-emotional-intelligence.html">Emotional Intelligence: Chpt. 1</a>
-						<p>Date: 2 March 2016</p>
-					</li>
-					<li>
-						<a href="t2-html-css-dom-p2.html">Udacity Reflection Part 2</a>
-						<p>Date: 2 March 2016</p>
-					</li>
-					<li>
-						<a href="t2-html-css-dom-p1.html">Udacity Reflection</a>
-						<p>Date: 1 March 2016</p>
-					</li>
-					<li>
-						<a href="c1-time-and-habits-blog.html">Time & Habits</a>
-						<p>Date: 25 February 2016</p>
-					</li>
-					<li>
-						<a href="c1-reflection-blog.html">Reflections on a fire side chat</a>
-						<p>Date: 23 February 2016</p>
-					</li>
-				</ul>
-			</div>
-		</div>
-	  </div>
+							<li>
+								<a href="t3-design-to-web-blog.html">Design to Deployment</a>
+								<p>Date: 10 March 2016</p>
+							</li>
+							<li>
+								<a href="c2-emotional-intelligence.html">Emotional Intelligence: Chpt. 1</a>
+								<p>Date: 2 March 2016</p>
+							</li>
+							<li>
+								<a href="t2-html-css-dom-p2.html">Udacity Reflection Part 2</a>
+								<p>Date: 2 March 2016</p>
+							</li>
+							<li>
+								<a href="t2-html-css-dom-p1.html">Udacity Reflection</a>
+								<p>Date: 1 March 2016</p>
+							</li>
+							<li>
+								<a href="c1-time-and-habits-blog.html">Time & Habits</a>
+								<p>Date: 25 February 2016</p>
+							</li>
+							<li>
+								<a href="c1-reflection-blog.html">Reflections on a fire side chat</a>
+								<p>Date: 23 February 2016</p>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>
+	  </section>
 	</div>
   </body>
 </html>
