--- a/blogs/c3-meditation-process.html
+++ b/blogs/c3-meditation-process.html
@@ -36,27 +36,21 @@
 				<section class="container">
 					<div class="row">
 						<article class="twelve columns blogcontent">
-							<p>dates 23 february tags a b c </p>
+							<p>Date 11 March 2016</p>
 
-							<p> 
-								FRom faireſt creatures we deſire increaſe,  That thereby beauties Roſe might neuer die,  But as the riper ſhould by time deceaſe,  His tender heire might beare his memory:  But thou contracted to thine owne bright eyes,  Feed’ſt thy lights flame with ſelfe ſubſtantiall fewell,  
-							</p>
-							<p>
-								Making a famine where aboundance lies,  Thy ſelfe thy foe,to thy ſweet ſelfe too cruell:  Thou that art now the worlds freſh ornament,  And only herauld to the gaudy ſpring,  Within thine owne bud burieſt thy content,  And tender chorle makſt waſt in niggarding:  Pitty the world,or elſe this glutton be,  To eate the worlds due,by the graue and thee.
-							</p>	
-							<p>
-								Making a famine where aboundance lies,  Thy ſelfe thy foe,to thy ſweet ſelfe too cruell:  Thou that art now the worlds freſh ornament,  And only herauld to the gaudy ſpring,  Within thine owne bud burieſt thy content,  And tender chorle makſt waſt in niggarding:  Pitty the world,or elſe this glutton be,  To eate the worlds due,by the graue and thee.
-							</p>
-
-							<a href="#">Here's my link</a>
-
-							<ul>
-								<li>lists</li>
-								<li>lists</li>
-								<li>lists</li>
-								<li>lists</li>
-
-							</ul>
+							 <h5>Thoughts on Medidation</h5>
+							 <p>
+							 	My thoughts on meditation were not changed by the content of Search Inside Yourself, Chapter 2.  I have meditated in the past, and believe it is just like exercise, only for the mind.    If it can become a regular habit (the hard part), it can reduce stress, and make you an happier person.  I really do believe that.  
+							 </p>
+							
+							 <h5>Did any of the suggested mediation techniques stand out to you?</h5>
+							 <p>
+							 	Not particularly, as they are already techniques I am aware of.  I prefer to sit in a comfortable position, and focus on my breathing.  Allowing feelings to come and go, noises and surrounding distractions to wash through me.  I liked the analogy in Search Inside Yourself that described emotions as a ball you can observe, play with, and put down.  But only if you accept their existence in the firs place. 
+							 </p>
+							 <p>
+							 	Here's a picture of me and some fellow teachers meditating with one of my students in Luang Prabang, Laos. It was an amazing experience!
+							 </p>
+							 <img src="../styles/assets/PANO_20160130_095705.jpg" alt="#" class="u-max-full-width">
 						</article>
 					</div>
 				</section>
