Added blog title to meditation

--- a/blogs/c3-meditation-process.html
+++ b/blogs/c3-meditation-process.html
@@ -28,7 +28,7 @@
 		  
 			  	<div class="row">
 				  	<header class="twelve columns heading">
-					  		<h3>Blog Title here</h3>
+					  		<h3>Meditation & Process</h3>
 				  			<h5>Oliver Stigley</h5>
 				  	</header>
 			  	</div>
