Mindfulness Conversation blog

--- a/blogs/blogs-index.html
+++ b/blogs/blogs-index.html
@@ -40,6 +40,11 @@
 					<div class="twelve columns bloglist">
 						<ul>
 							<li>
+								<a href="c4-daily-mindfulness.html">Mindfulness Conversation</a>
+								<p>Date 15 March 2016</p>
+							</li>
+
+							<li>
 								<a href="t4-javascript-basics.html">Javascript</a>
 								<p>Date 15 March 2016</p>
 							</li>
