mindfulness blog typo

--- a/blogs/c4-daily-mindfulness.html
+++ b/blogs/c4-daily-mindfulness.html
@@ -1,7 +1,7 @@
 	<!DOCTYPE html>
 	<html>
 	  <head>
-	    <title>Oliver Stigley: Minfulness Conversation</title>
+	    <title>Oliver Stigley: Mindfulness Conversation</title>
 	    
 		<meta charset="utf-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
