javascript header partial

--- a/blogs/t4-javascript-basics.html
+++ b/blogs/t4-javascript-basics.html
@@ -14,21 +14,13 @@
 	  </head>
 	  
 	  <body>
-			<div id="backlink"><a href="../blogs/blogs-index.html">back...</a></div>
-	  	  	<section class="container">
-		  	  	<div class="row">
-			  	  	<div class="twelve columns ext-links">
-					  <ul>
-					  	<li><a href="https://nz.linkedin.com/in/oliverstigley"><img src="../styles/assets/linked-in-logo-on-black-square-background_318-40265.png"></a></li>
-					  	<li><a href="https://github.com/ostigley"><img src="../styles/assets/GitHub-Mark.png"></a></li>
-					  	<li><a href="mailto:oliverstigley@gmail.com"><img src="../styles/assets/mail-4.png"></a></li>
-					  </ul>
-				  </div>
-				</div>
+  	  	<script type="text/javascript" src="../scripts/header.js"></script>
+  	  	<div id="backlink"><a href="../blogs/blogs-index.html">back...</a></div>
+  	  	<div class="container">
 		  
 			  	<div class="row">
 				  	<header class="twelve columns heading">
-					  		<h3>Java Script</h3>
+					  		<h3>Javascript</h3>
 				  			<h5>Oliver Stigley</h5>
 				  	</header>
 			  	</div>
@@ -40,7 +32,7 @@
 							
 							<h5>How does Javascript compare to HTML and CSS?</h5>
 							<p>
-								Javascript adds a layer of functionality to websites that HTML and CSS cannot.  It allows web content to become dynamic.   Previously I have used the analogy that HTML is the walls, roof and floor of a house, CSS is the interior design.   Well, Javascript then tells us how to behave in each room.  Can we throw pillows?  Can we move paintings?  Can we change the colour of the bed sheets?  Javascript lets you make these decisions. 
+								Javascript adds a layer of functionality to websites that HTML and CSS cannot.  It allows web content to become dynamic.   Previously I have used the analogy that HTML is the walls, roof and floor of a house, CSS is the interior design.   Well, Javascript then tells us how to behave in each room.  Can we throw pillows?  Can we move paintings?  Can we change the colour of the bed sheets?  It lets you manipulate the DOM!  Javascript lets you make these decisions. 
 							</p>
 
 							<h5>Control Flow</h5>
