--- a/blogs/c4-daily-mindfulness.html
+++ b/blogs/c4-daily-mindfulness.html
@@ -14,17 +14,9 @@
 	  </head>
 	  
 	  <body>
-			<div id="backlink"><a href="../blogs/blogs-index.html">back...</a></div>
-	  	  	<section class="container">
-		  	  	<div class="row">
-			  	  	<div class="twelve columns ext-links">
-					  <ul>
-					  	<li><a href="https://nz.linkedin.com/in/oliverstigley"><img src="../styles/assets/linked-in-logo-on-black-square-background_318-40265.png"></a></li>
-					  	<li><a href="https://github.com/ostigley"><img src="../styles/assets/GitHub-Mark.png"></a></li>
-					  	<li><a href="mailto:oliverstigley@gmail.com"><img src="../styles/assets/mail-4.png"></a></li>
-					  </ul>
-				  </div>
-				</div>
+  	  	<script type="text/javascript" src="../scripts/header.js"></script>
+  	  	<div id="backlink"><a href="../blogs/blogs-index.html">back...</a></div>
+  	  	<div class="container">
 		  
 			  	<div class="row">
 				  	<header class="twelve columns heading">
