background js file and p highlight

--- a/blogs/c1-reflection-blog.html
+++ b/blogs/c1-reflection-blog.html
@@ -11,6 +11,8 @@
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
 	<link rel="stylesheet" type="text/css" href="../styles/main.css">
 
+	<script type="text/javascript" src="../scripts/myScripts.js"></script>
+
   </head>
   
   <body>
