--- a/blogs/t3-design-to-web-blog.html
+++ b/blogs/t3-design-to-web-blog.html
@@ -10,6 +10,7 @@
 	    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
 		<link rel="stylesheet" type="text/css" href="../styles/main.css">
+		<script type="text/javascript" src="../scripts/myScripts.js"></script>
 
 	  </head>
 	  
