--- a/racecar.html
+++ b/racecar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Olly's drag racer</title>
+	<title>Olly's highway</title>
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +13,7 @@
 <body>
 	<main>
 		<header>
-			<h1>Drag Racing!</h1>
+			<h1>Motormadness</h1>
 		</header>
 
 		<div id="main">
@@ -31,30 +31,23 @@
 
 			<section  class="countdownbox">
 				<h2 class="counter">3</h2>
-				<h3>Push z!</h3>
+				<p>z = left</p>
+				<p>x = forward</p>
+				<p>c = right</p>
+
 			</section>
 
 
 			<table class="racer_table">
-			  
-			    <tr><td class="Player_1 finish"></td><td class="Player_2 finish"></tr>
-			    <tr><td class="Player_1"></td><td class="Player_2"></tr>
-			    <tr><td class="Player_1"></td><td class="Player_2"></tr>
-			    <tr><td class="Player_1"></td><td class="Player_2"></tr>
-			    <tr><td class="Player_1"></td><td class="Player_2"></tr>
-			    <tr><td class="Player_1"></td><td class="Player_2"></tr>
-			    <tr><td class="Player_1"></td><td class="Player_2"></tr>
-			    <tr><td class="Player_1"></td><td class="Player_2"></tr>
-			    <tr><td class="Player_1"></td><td class="Player_2"></tr>
-			    <tr><td class="Player_1"></td><td class="Player_2"></td></tr>
-			  
-
-
-			</table> <br>
+				<tbody>
+				</tbody>
+			</table> 
 		
 			<section class="countdownbox">
 				<h2 class="counter">3</h2>
-				<h3>Push / !</h3>
+				<p>, (coma) = left</p>
+				<p>. (fullstop) = forward</p>
+				<p>/ = right</p>
 			</section>	
 
 			<section id="player2box">
@@ -76,7 +69,9 @@
 
 	</main>
 
-
+	<script type="text/javascript" src="scripts/buildtrack.js"></script>
 	<script type="text/javascript" src="scripts/racecarscript.js"></script>
+	<script type="text/javascript" src="scripts/otherCars.js"></script>
+
 </body>
 </html>
