sprint 5 technical blog

--- a/blogs/blogs-index.html
+++ b/blogs/blogs-index.html
@@ -35,6 +35,11 @@
 				<div class="row">
 					<div class="twelve columns bloglist">
 						<ul>
+
+							<li>
+								<a href="t5-problem-solving.html">Problem Solving & Javascript</a>
+								<p>Date 25 March 2016</p>
+							</li>
 							<li>
 								<a href="c4-daily-mindfulness.html">Mindfulness Conversation</a>
 								<p>Date 15 March 2016</p>
