cultural blog sprint 6

--- a/blogs/t6-js-language.html
+++ b/blogs/t6-js-language.html
@@ -29,7 +29,7 @@
 				<section class="container">
 					<div class="row">
 						<article class="twelve columns blogcontent">
-							<p>dates 01 April 2016</p>
+							<p>01 April 2016</p>
 
 							<h4>Parentheses ()</h4>
 							<p>
