correclty indexed culture blog

--- a/blogs/blogs-index.html
+++ b/blogs/blogs-index.html
@@ -36,7 +36,7 @@
 					<div class="twelve columns bloglist">
 						<ul>
 							<li>
-								<a href="c6-control.html">Javascript Language</a>
+								<a href="c6-control.html">Self Control</a>
 								<p>Date 1 April 2016</p>
 							</li>
 
